--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,5 +18,12 @@
     "postcss": "^8.5.3",
     "tailwindcss": "^3.2.7",
     "vite": "^6.2.3"
+  },
+  "dependencies": {
+    "i18next": "^25.0.0",
+    "i18next-browser-languagedetector": "^8.0.4",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-i18next": "^15.4.1"
   }
 }
