--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,16 +14,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.4.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.2.7",
     "vite": "^6.2.3"
   },
   "dependencies": {
-    "i18next": "^25.0.0",
-    "i18next-browser-languagedetector": "^8.0.4",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-i18next": "^15.4.1"
+    "i18next": "^23.7.18",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-i18next": "^12.3.1",
+    "react-router-dom": "^6.22.1"
   }
 }
